10-1-edns.yaml/dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.14.1
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=diarabaka.be
        - --zone-id-filter=
        - --provider=cloudflare
        - --cloudflare-proxied
        - --txt-prefix=k8s-learning
