10-1-edns.yaml/database.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: cfitech
  labels:
    app: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: database
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cfitech
spec:
  type: LoadBalancer
  ports:
  - name: sql
    port: 3306
    protocol: TCP
    targetPort: sql
  selector:
    app: mysql
