10-1-edns.yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: cfitech
  annotations:
    external-dns.alpha.kubernetes.io/target: diarabaka.be
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cfitech.myk8s.be
    secretName: learning-tls-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              name: http
    host: cfitech.myk8s.be
